Add possibility to disable local cache of tiles

--- a/README
+++ b/README
@@ -32,7 +32,7 @@ Using a remote tile service (Cloudmade by default):
 
     logging.basicConfig(level=logging.DEBUG)
         
-    mb = MBTilesBuilder(remote=True)
+    mb = MBTilesBuilder(remote=True, cache=False)
     mb.add_coverage(bbox=(-90.0, -180.0, 180.0, 90.0), 
                         zoomlevels=[0, 1])
     mb.run()
