Update README with new usages

--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-*Landez* builds MBTiles files either from a remote tile service URL or from a local Mapnik stylesheet.
+*Landez* manipulates tiles, builds MBTiles and arrange tiles together into single images.
 
+Tiles can either be obtained from a remote tile service URL, from a local Mapnik stylesheet
+or from MBTiles files.
+
+For building MBTiles, it uses *mbutil* from Mapbox https://github.com/mapbox/mbutil at the final stage.
 The land covered is specified using a list of bounding boxes and zoom levels.
-
-It uses *mbutil* from Mapbox https://github.com/mapbox/mbutil at the final stage to 
-build the MBTiles file.
 
 
 =======
@@ -15,12 +16,21 @@ requires `mapnik` if the tiles are drawn locally. ::
 
     sudo aptitude install python-mapnik
 
+And `PIL` to export arranged tiles into images. ::
+
+    sudo aptitude install python-imaging
+
+
 =====
 USAGE
 =====
 
+Building MBTiles files
+======================
+
 Remote tiles
-============
+------------
+
 Using a remote tile service (Cloudmade by default):
 ::
 
@@ -30,14 +40,15 @@ Using a remote tile service (Cloudmade by default):
     logging.basicConfig(level=logging.DEBUG)
         
     mb = MBTilesBuilder(remote=True, cache=False)
-    mb.add_coverage(bbox=(-90.0, -180.0, 180.0, 90.0), 
+    mb.add_coverage(bbox=(-180.0, -90.0, 180.0, 90.0), 
                         zoomlevels=[0, 1])
     mb.run()
 
 Please respect `Tile usage policies <http://wiki.openstreetmap.org/wiki/Tile_usage_policy>`
 
 Local rendering
-===============
+---------------
+
 Using mapnik to render tiles:
 ::
 
@@ -47,9 +58,40 @@ Using mapnik to render tiles:
     logging.basicConfig(level=logging.DEBUG)
     
     mb = MBTilesBuilder(stylefile="yourstyle.xml", filepath="dest.mbtiles")
-    mb.add_coverage(bbox=(-90.0, -180.0, 180.0, 90.0), 
+    mb.add_coverage(bbox=(-180.0, -90.0, 180.0, 90.0), 
                     zoomlevels=[0, 1])
     mb.run()
+
+
+From an other MBTiles file
+--------------------------
+::
+
+    import logging
+    from landez import MBTilesBuilder
+    
+    logging.basicConfig(level=logging.DEBUG)
+    
+    mb = MBTilesBuilder(mbtiles_file="yourfile.mbtiles", filepath="dest.mbtiles")
+    mb.add_coverage(bbox=(-180.0, -90.0, 180.0, 90.0), 
+                    zoomlevels=[0, 1])
+    mb.run()
+
+
+Export Images
+=============
+
+Specify tiles sources in the exact same way as for building MBTiles files.
+
+::
+
+    import logging
+    from landez import ImageExporter
+    
+    logging.basicConfig(level=logging.DEBUG)
+    
+    ie = ImageExporter(mbtiles_file="yourfile.mbtiles")
+    ie.export_image(bbox=(-180.0, -90.0, 180.0, 90.0), zoomlevel=3, imagepath="image.png")
 
 
 =======
@@ -57,6 +99,7 @@ AUTHORS
 =======
 
     * Mathieu Leplatre <mathieu.leplatre@makina-corpus.com>
+    * Sergej Tatarincev
     * Thanks to mbutil authors <https://github.com/mapbox/mbutil>
 
 =======
