--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,11 @@
 CHANGELOG
 =========
 
+2.0.0-alpha (2012-05-23)
+========================
+
+* Refactoring of whole stack
+
 1.8.2 (2012-03-27)
 ==================
 
