Back to development: 2.0.0

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@
 CHANGELOG
 =========
 
+2.0.0 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 2.0.0-alpha (2012-05-23)
 ========================
 
