--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,11 @@
 CHANGELOG
 =========
 
+2.0.1 (unreleased)
+==================
+
+* Fix infinite loop on blending layers
+
 2.0.0 (2012-05-25)
 ==================
 
