--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@
 CHANGELOG
 =========
 
+2.0.2 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 2.0.1 (2012-05-29)
 ==================
 
