Back to development: 2.0.3

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@
 CHANGELOG
 =========
 
+2.0.3 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 2.0.2 (2012-06-21)
 ==================
 
