--- a/CHANGES
+++ b/CHANGES
@@ -5,8 +5,7 @@ CHANGELOG
 2.0.3 (unreleased)
 ==================
 
-- Nothing changed yet.
-
+* Fix Mapnik signature on render()
 
 2.0.2 (2012-06-21)
 ==================
