Back to development: 2.0.4

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@
 CHANGELOG
 =========
 
+2.0.4 (unreleased)
+=====----=========
+
+- Nothing changed yet.
+
+
 2.0.3 (2013-05-03)
 ==================
 
