--- a/CHANGES
+++ b/CHANGES
@@ -3,9 +3,9 @@ CHANGELOG
 =========
 
 2.0.4 (unreleased)
-=====----=========
+==================
 
-- Nothing changed yet.
+* Add TMS support (ebrehault)
 
 
 2.0.3 (2013-05-03)
