--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ CHANGELOG
 
 * Add TMS support (ebrehault)
 * Add default subdomains argument for TileSource
+* Add ability to set HTTP headers for tiles
 
 2.0.3 (2013-05-03)
 ==================
