--- a/CHANGES
+++ b/CHANGES
@@ -5,8 +5,7 @@ CHANGELOG
 2.1.1 (unreleased)
 ==================
 
-- Nothing changed yet.
-
+* Do not hard-code ``grid();`` JSONP callback.
 
 2.1.0 (2013-08-27)
 ==================
