Back to development: 2.1.2

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@
 CHANGELOG
 =========
 
+2.1.2 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 2.1.1 (2013-08-27)
 ==================
 
