Back to development: 2.2.1

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@
 CHANGELOG
 =========
 
+2.2.1 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 2.2.0 (2014-09-22)
 ==================
 
