--- a/CHANGES
+++ b/CHANGES
@@ -2,10 +2,10 @@
 CHANGELOG
 =========
 
-3.0.0.dev0
+2.5.0.dev0
 ==================
 
-* Requires Python 3. Drop support of Python 2.
+* Add support of Python 3.
 
 
 2.4.0 (2017-03-02)
